--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>netshell</groupId>
+    <groupId>net.es</groupId>
     <artifactId>netshell</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <properties>
         <kernel.version>0.0.1-SNAPSHOT</kernel.version>
     </properties>
@@ -155,6 +156,13 @@
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.50</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.xeustechnologies</groupId>
+            <artifactId>jcl-core</artifactId>
+            <version>2.5</version>
+        </dependency>
+
 
     </dependencies>
 
