--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,17 @@
             <version>2.5</version>
         </dependency>
 
+        <!-- Felix / OSGi -->
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.main</artifactId>
+            <version>4.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.gogo.runtime</artifactId>
+            <version>0.12.1</version>
+        </dependency>
 
     </dependencies>
 
