--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,11 @@
     <groupId>net.es</groupId>
     <artifactId>netshell</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
     <properties>
         <kernel.version>0.0.1-SNAPSHOT</kernel.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <repositories>
@@ -72,7 +74,7 @@
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
-            <version>2.5.2</version>
+            <version>2.5.3</version>
         </dependency>
 
         <dependency>
@@ -85,7 +87,7 @@
         <dependency>
             <groupId>org.apache.sshd</groupId>
             <artifactId>sshd-core</artifactId>
-            <version>0.11.0</version>
+            <version>0.12.0</version>
         </dependency>
 
         <dependency>
@@ -129,6 +131,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.tinyjee.jgraphx</groupId>
+            <artifactId>jgraphx</artifactId>
+            <version>2.0.0.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-json</artifactId>
             <version>1.18.1</version>
@@ -138,6 +146,17 @@
             <artifactId>jersey-client</artifactId>
             <version>1.18.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
         <!-- iso time -->
         <dependency>
             <groupId>joda-time</groupId>
@@ -181,29 +200,37 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.dstovall</groupId>
-                <artifactId>onejar-maven-plugin</artifactId>
-                <version>1.4.4</version>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.5.3</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+                        <Bundle-Name>ESnet NetShell</Bundle-Name>
+                        <Bundle-Version>1.0-SNAPSHOT</Bundle-Version>
+                        <Bundle-Activator>net.es.netshell.boot.BootActivator</Bundle-Activator>
+                        <Private-Package>net.es.netshell.*</Private-Package>
+                        <Import-Package>*</Import-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.karaf.tooling</groupId>
+                <artifactId>features-maven-plugin</artifactId>
+                <version>2.2.5</version>
                 <executions>
                     <execution>
-                        <configuration>
-                            <mainClass>net.es.netshell.boot.BootStrap</mainClass>
-                            <!-- Optional -->
-                            <onejarVersion>0.97</onejarVersion>
-                            <!-- Optional, use only if you need to include native libraries (dll's) -->
-
-                            <!-- Optional, default is false -->
-                            <attachToBuild>true</attachToBuild>
-                            <!-- Optional, default is "onejar" -->
-                            <classifier>onejar</classifier>
-                        </configuration>
+                        <id>create-kar</id>
                         <goals>
-                            <goal>one-jar</goal>
+                            <goal>create-kar</goal>
                         </goals>
+                        <configuration>
+                            <featuresFile>${project.basedir}/src/main/resources/features.xml</featuresFile>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
