--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -15,7 +15,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.es</groupId>
-    <artifactId>netshell</artifactId>
+    <artifactId>netshell-kernel</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <properties>
