Checkpoint of Jython / OSGi integration.
At this point a Python program can access Java classes that are accessible (possibly via OSGi) from the netshell-python bundle...in practice this basically means classes in netshell-python or netshell-kernel, although the current implementation also uses a hard-coded list of packages.

TODO:

1.  Remove requirement for a hard-coded list of packages to give to the Jython packagemanager.  This will probably take the part of some WIP-but-not-working-yet better parsing of OSGi bundles' headers.

2.  Figure out a better and more dynamic way of allowing Python code to access classes in other Bundles, in particular without explicit imports on the part of the netshell-python bundle.  This will probably require a (WIP-but-not-working yet) different ClassLoader that can use the ClassLoader objects in one of the many different bundles.

--- a/python/pom.xml
+++ b/python/pom.xml
@@ -82,7 +82,7 @@
                         <Bundle-Version>1.0-SNAPSHOT</Bundle-Version>
                         <Bundle-Activator>net.es.netshell.python.PythonActivator</Bundle-Activator>
                         <Export-Package>net.es.netshell.python</Export-Package>
-                        <Import-Package>*</Import-Package>
+                        <Import-Package>net.es.netshell.api,*</Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
