--- a/python/pom.xml
+++ b/python/pom.xml
@@ -61,7 +61,7 @@
         <!-- NetShell -->
         <dependency>
             <groupId>net.es</groupId>
-            <artifactId>netshell</artifactId>
+            <artifactId>netshell-kernel</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
