Fix issues surrounding net.es.netshell.api.SSHConnection that were preventing netshell-kernel from reloading from the karaf bundle cache.
Basically the problem was a dependency on some bouncycastle.org package (org.bouncycastle.openssl).  I'm not sure why this was causing issues, but the package in question was only needed by net.es.netshell.api.SSHConnection.  For the moment, make the resolution of this module optional in the netshell-kernel metadata and remove the JAR files from the netshell-kernel package.

While here, remove some hard-coded hostname, usernames, and passwords from SSHConnection.

This change breaks SSHConnection but it needed some reworking anyway.  And we drastically shorten debugging cycle for OSGi issues because we no longer need to uninstall and reinstall the netshell bundles around a karaf restart.

--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -159,6 +159,8 @@
             <version>1.1-SNAPSHOT</version>
         </dependency>
 
+        <!-- bouncycastle.  To prevent some OSGi breakage and interactions with the Karaf modules,
+        we need to make the bouncycastle packages optional package imports. -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
@@ -199,7 +201,8 @@
                         <Bundle-Name>ESnet NetShell</Bundle-Name>
                         <Bundle-Version>1.0-SNAPSHOT</Bundle-Version>
                         <Bundle-Activator>net.es.netshell.boot.BootActivator</Bundle-Activator>
-                        <Export-Package>net.es.netshell.api,
+                        <Export-Package>
+                            net.es.netshell.api,
                             net.es.netshell.boot,
                             net.es.netshell.classloader,
                             net.es.netshell.configuration,
@@ -214,7 +217,10 @@
                             net.es.netshell.shell.annotations,
                             net.es.netshell.sshd
                         </Export-Package>
-                        <Import-Package>*</Import-Package>
+                        <Import-Package>
+                            org.bouncycastle.openssl;version="[1.50,2)";resolution:=optional,
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
