Improve compatibility with Karaf 3.0.1 and OpenDaylight Helium SR1.1.
These changes basically consist of allowing netshell to use older versions of dependent packages / bundles than what's in the development environment, which uses Karaf 3.0.2.

 With these changes, we can load netshell-kernel and netshell-python into the Karaf environment that comes with OpenDaylight Helium SR1.1.  How well it runs, when loaded like this, is not clear.  The SecurityManager throws some exceptions for the interactive shell; it is not clear whether these are caused by the version of Karaf being used or the ODL bundles run inside the Karaf instance.

 Ideally we'd be able to make ODL run in a newer Karaf environment, such as 3.0.2 or the upcoming 4.0.

--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -219,6 +219,7 @@
                         </Export-Package>
                         <Import-Package>
                             org.bouncycastle.openssl;version="[1.50,2)";resolution:=optional,
+                            org.apache.felix.service.command;version="[0.10.0,1.0.0)",
                             *
                         </Import-Package>
                     </instructions>
