--- a/python/pom.xml
+++ b/python/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
-            <version>2.7-b4</version>
+            <version>2.7.0</version>
         </dependency>
 
         <!-- NetShell -->
