POM fixups:  Add odl as sub-module in top-level pom.xml.  netshell-kernel doesn't depend on sLS.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>kernel</module>
         <module>python</module>
+        <module>odl</module>
     </modules>
     <build>
         <pluginManagement>
