--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>kernel</module>
         <module>python</module>
         <module>odl</module>
+        <module>controller</module>
     </modules>
     <build>
         <pluginManagement>
