- minor update on the controller API         - added Layer2Controller API to netshell-odl controller (empty stub for the moment)

--- a/odl/pom.xml
+++ b/odl/pom.xml
@@ -92,6 +92,12 @@
             <artifactId>netshell-kernel</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- NetShell Cotnroller API -->
+        <dependency>
+            <groupId>net.es</groupId>
+            <artifactId>netshell-controller</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
