--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -67,6 +67,12 @@
 	    <version>0.5.1</version>
         </dependency>
 
+        <dependency>
+	    <groupId>com.google.collections</groupId>
+	    <artifactId>google-collections</artifactId>
+	    <version>1.0-rc2</version>
+        </dependency>
+
 	<dependency>
 	    <groupId>com.jcraft</groupId>
 	    <artifactId>jsch</artifactId>
