--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -60,7 +60,11 @@
     </pluginRepositories>
 
     <dependencies>
-
+	<dependency>
+            <groupId>net.sf.expectit</groupId>
+            <artifactId>expectit-core</artifactId>
+            <version>0.8.0</version>
+            </dependency>
         <dependency>
 	    <groupId>org.libvirt</groupId>
      	    <artifactId>libvirt</artifactId>
