--- a/odl-mdsal/pom.xml
+++ b/odl-mdsal/pom.xml
@@ -240,6 +240,24 @@
                             </sources>
                         </configuration>
                     </execution>
+
+                    <execution>
+                        <id>attach-artifacts</id>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>${project.build.directory}/classes/initial/04-netshell-mdsal.xml</file>
+                                    <type>xml</type>
+                                    <classifier>config</classifier>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+
                 </executions>
             </plugin>
             <plugin>
