Checkpoint.  We can pull something that looks like a switch inventory from the data store (via a DataBroker query).
We do some POM hacks to make our IDE look for generated files correctly, although those files probably need to be moved somewhere else, say under target/generated-sources/.

Create a class that is the implementation of the MD-SAL integration "service", which gets instantiated by the MD-SAL integration module.  The module passes some things that it learns about the ODL infrastructure to the service (mostly objects so that the service can find ODL services such as the flow programming and packet processing services.

TODO:  Try to understand the switch inventory.  Fix pathname for generated files; the files that get regenerated on every build need to move out from version control.

--- a/odl-mdsal/pom.xml
+++ b/odl-mdsal/pom.xml
@@ -236,7 +236,11 @@
                         </goals>
                         <configuration>
                             <sources>
+                                <!-- XXX Need to reconcile these three -->
+                                <!-- Perhaps generatedConfigPath shoudl be ${project.build.directory}/generated-sources/config -->
                                 <source>${project.build.directory}/generated-sources/config</source>;
+                                <source>${generatedConfigPath}</source>
+                                <source>${generatedSalPath}</source>
                             </sources>
                         </configuration>
                     </execution>
