Build fix-ups...nothing was broken but this might prevent some problems later.
Make yangtools put all of the generated source under target/generated-sources per Maven convention.

Remove yangtools-generated sources from version control.  As a result we won't be churning these files on every build, but it means that a build has to be done to generate these sources (in particular, IntelliJ might complain about missing class definitions if perusing sources after a fresh checkout).

--- a/odl-mdsal/pom.xml
+++ b/odl-mdsal/pom.xml
@@ -44,8 +44,8 @@
         <config.version>0.2.8-Helium-SR3</config.version>
         <guava.version>14.0.1</guava.version>
 
-        <generatedConfigPath>src/main/yang-gen-config</generatedConfigPath>
-        <generatedSalPath>src/main/yang-gen-sal</generatedSalPath>
+        <generatedConfigPath>${project.build.directory}/generated-sources/config</generatedConfigPath>
+        <generatedSalPath>${project.build.directory}/generated-sources/sal</generatedSalPath>
 
     </properties>
 
@@ -236,9 +236,6 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <!-- XXX Need to reconcile these three -->
-                                <!-- Perhaps generatedConfigPath shoudl be ${project.build.directory}/generated-sources/config -->
-                                <source>${project.build.directory}/generated-sources/config</source>;
                                 <source>${generatedConfigPath}</source>
                                 <source>${generatedSalPath}</source>
                             </sources>
