Initial port to ODL Lithium-SR1.
Update dependencies to ODL Lithium components, in some cases adding property definitions to ease further maintenance.

Register inter-feature dependencies in features.xml file.

Explicitly note that netshell-odl bundle provides AD-SAL support.

Remove unneeded Controller.java file from netshell-odlmdsal.

With these changes, the recent ENOS tutorial functionality works, as far as has been tested, although the MD-SAL support module doesn't load due to a dependency on an unexplained version of some com.google.common packages.

--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -22,6 +22,8 @@
         <kernel.version>0.0.1-SNAPSHOT</kernel.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <guava.version>18.0</guava.version>
     </properties>
 
     <repositories>
@@ -72,9 +74,9 @@
         </dependency>
 
         <dependency>
-	    <groupId>com.google.collections</groupId>
-	    <artifactId>google-collections</artifactId>
-	    <version>1.0-rc2</version>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+	    <version>${guava.version}</version>
         </dependency>
 
 	<dependency>
