--- a/odl-mdsal/pom.xml
+++ b/odl-mdsal/pom.xml
@@ -39,10 +39,11 @@
         do here, but for now take these definitions from the ODL release that we want
         to run against.
         -->
-        <yangtools.version>0.6.5-Helium-SR3</yangtools.version>
-        <mdsal.version>1.1.3-Helium-SR3</mdsal.version>
-        <config.version>0.2.8-Helium-SR3</config.version>
-        <guava.version>14.0.1</guava.version>
+        <yangtools.version>0.7.1-Lithium-SR1</yangtools.version>
+        <mdsal.version>1.2.1-Lithium-SR1</mdsal.version>
+        <config.version>0.3.1-Lithium-SR1</config.version>
+        <openflowplugin.version>0.1.1-Lithium-SR1</openflowplugin.version>
+        <guava.version>18.0</guava.version>
 
         <generatedConfigPath>${project.build.directory}/generated-sources/config</generatedConfigPath>
         <generatedSalPath>${project.build.directory}/generated-sources/sal</generatedSalPath>
@@ -134,14 +135,14 @@
             <version>${mdsal.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.controller.model</groupId>
+            <groupId>org.opendaylight.openflowplugin.model</groupId>
             <artifactId>model-flow-base</artifactId>
-            <version>${mdsal.version}</version>
+            <version>${openflowplugin.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.controller.model</groupId>
+            <groupId>org.opendaylight.openflowplugin.model</groupId>
             <artifactId>model-flow-service</artifactId>
-            <version>${mdsal.version}</version>
+            <version>${openflowplugin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
