--- a/odl-mdsal/pom.xml
+++ b/odl-mdsal/pom.xml
@@ -206,6 +206,7 @@
                                     <outputBaseDir>${generatedSalPath}</outputBaseDir>
                                 </generator>
                             </codeGenerators>
+                            <!-- IntelliJ thinks the line below is an error.  But Maven is fine with it.  -->
                             <inspectDependencies>true</inspectDependencies>
                         </configuration>
                     </execution>
@@ -273,6 +274,12 @@
                         <Bundle-Name>ESnet NetShell Open Daylight (MD-SAL) Integration</Bundle-Name>
                         <Bundle-Version>1.0-SNAPSHOT</Bundle-Version>
                         <Export-Package>net.es.netshell.odlmdsal.impl</Export-Package>
+                        <!--
+                         Hard-wire some package imports to prevent headers that inexplicably bind to an
+                         old version of these packages.  Note these should track the definition of
+                         ${guava.version} above, but we don't use ${guava.version} directly because
+                         there's no way of writing ${guava.version}+1.
+                         -->
                         <Import-Package>com.google.common.base;version="[18.0,19)",com.google.common.collect;version="[18.0,19)",com.google.common.util.concurrent;version="[18.0,19)",*</Import-Package>
                     </instructions>
                 </configuration>
