--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>odl</module>
         <module>odl-mdsal</module>
         <module>controller</module>
+        <module>odl-corsa</module>
     </modules>
     <build>
         <pluginManagement>
