--- a/odl-corsa/pom.xml
+++ b/odl-corsa/pom.xml
@@ -151,6 +151,11 @@
             <version>${openflowplugin.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>openflowplugin</artifactId>
+            <version>${openflowplugin.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>config-api</artifactId>
             <version>${config.version}</version>
