Fix a bug in (wrongly) setting a buffer ID when pushing flows.

--- a/odl-mdsal/pom.xml
+++ b/odl-mdsal/pom.xml
@@ -135,6 +135,11 @@
             <version>${mdsal.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>openflowplugin-api</artifactId>
+            <version>${openflowplugin.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.openflowplugin.model</groupId>
             <artifactId>model-flow-base</artifactId>
             <version>${openflowplugin.version}</version>
