First cut of unified controller module.
There are still some classes in the controller module that need to be removed.

--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -57,6 +57,17 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.es</groupId>
+            <artifactId>netshell-odl-mdsal</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.es</groupId>
+            <artifactId>netshell-odl-corsa</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
