WIP / Checkpoint commit of SDN Controller, SDN Controller client, and RabbitMQ interface.
This is a first step in trying to slightly decouple ENOS from ODL,
basically putting a RabbitMQ interface between the main part of ENOS
and ODL so that ENOS and ODL can run in two separate processes if we
want to move in that direction.  The design gives enough abstraction
that in theory we could even switch controllers to something like RYU
or ONOS.

SDN Controller runs in the same place as ODL.  SDN Controller runs
with the rest of Netshell/ENOS.  There's a RabbitMQ interface between
the two.  Messages are JSON-encoded structures to set up forwarding,
remove forwarding, add and delete meters, send packets (PACKET_OUT),
and receive packets (PACKET_IN).

Right now, all of these pieces live in the netshell-controller bundle;
these would eventually get broken out into at least two bundles (one to
go with ENOS and the other to go with ODL).

--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ ESnet Network Operating System (ENOS) Copyright (c) 2015, The Regents
+  ~ ESnet Network Operating System (ENOS) Copyright (c) 2016, The Regents
   ~ of the University of California, through Lawrence Berkeley National
   ~ Laboratory (subject to receipt of any required approvals from the
   ~ U.S. Dept. of Energy).  All rights reserved.
@@ -79,6 +79,14 @@
             <artifactId>netshell-odl-corsa-intf</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- RabbitMQ only needed for SDN Controller -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+
     </dependencies>
 
 
