- First checkin of the MongoDB driver/resource provider. Currently implements a single mondodb authentication allowing the user/password to be hidden from ENOS application. This will be the basics for ACL. Current state is fucntional but assumes that MondoDB is installed and configured (documentation in progress). Therefore, this driver is disabled by default.
Note that Netshell's configuration file has now few more configuration.

--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -217,6 +217,14 @@
             <version>2.0.1</version>
         </dependency>
 
+        <!-- MongoDB -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+
+
     </dependencies>
 
 
