- forgot to add the maven files in the previous commit

--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -223,7 +223,12 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.2.2</version>
         </dependency>
-
+        <!-- Mockito -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+        </dependency>
 
     </dependencies>
 
