--- a/python/pom.xml
+++ b/python/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>netshell-kernel</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- Mockito -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+        </dependency>
 
     </dependencies>
 
