--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -73,6 +73,11 @@
     </pluginRepositories>
 
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 	<dependency>
             <groupId>net.sf.expectit</groupId>
             <artifactId>expectit-core</artifactId>
