--- a/pom.xml
+++ b/pom.xml
@@ -31,14 +31,38 @@
        <java.version>1.7</java.version>
     </properties>
 
-    <modules>
-        <module>kernel</module>
-        <module>python</module>
-        <module>controller</module>
-        <!-- <module>odl-corsa</module> -->
-        <module>odl-mdsal</module>
-        <module>odl-corsa-intf</module>
-    </modules>
+    <profiles>
+        <profile>
+            <id>corsa</id>
+            <activation>
+                <property>
+                    <name>corsa</name>
+                </property>
+            </activation>
+                <modules>
+                    <module>kernel</module>
+                    <module>python</module>
+                    <module>controller</module>
+                    <module>odl-corsa</module>
+                    <module>odl-mdsal</module>
+                    <module>odl-corsa-intf</module>
+                </modules>
+        </profile>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+                <modules>
+                    <module>kernel</module>
+                    <module>python</module>
+                    <module>controller</module>
+                    <module>odl-mdsal</module>
+                    <module>odl-corsa-intf</module>
+                </modules>
+        </profile>
+    </profiles>
+
     <build>
         <pluginManagement>
             <plugins>
