WIP checkpoint for splitting netshell-controller.
netshell-controller-intf contains common classes for any code that needs to use the ENOS SDN controller interface.

netshell-odl-provider is the portion of the ENOS SDN controller interface that runs in an ODL container.

netshell-odl-controller is the portion of the ENOS SDN controller interfaces that runs in the ENOS container.

The OSGi feature definition file has been moved to its own OSGi bundle, netshell-features, because that needs to be accessible from both the ODL container and the ENOS container.  features.xml reflects the new intended organization of the various bundles.

No changes to package names at this point.

Doesn't compile yet, because the bundle activator for netshell-odl-provider depends on a class loader for OSGi bundles (to find the optional netshell-odl-corsa driver) that as of now only exists in netshell-kernel, but netshell-odl-provider cannot depend on netshell-kernel.  We should probably see if we can use the OSGi service registry instead (and indeed we do this in the case of the optional netshell-python module), although netshell-odl-corsa's use of MD-SAL complicates matters.

--- a/controller-intf/pom.xml
+++ b/controller-intf/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!--
   ~ ESnet Network Operating System (ENOS) Copyright (c) 2016, The Regents
   ~ of the University of California, through Lawrence Berkeley National
@@ -19,39 +18,20 @@
   ~ publicly and display publicly, and to permit other to do so.
   ~
   -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.es</groupId>
-    <artifactId>netshell-controller</artifactId>
+    <artifactId>netshell-controller-intf</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
-
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>Maven Repository Switchboard</name>
-            <url>http://repo1.maven.org/maven2</url>
-        </repository>
-        <repository>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>interval:5</updatePolicy>
-            </snapshots>
-            <id>esnet</id>
-            <name>ESnet Private Maven Repository</name>
-            <url>http://downloads.es.net/maven</url>
-	</repository>
-    </repositories>
 
     <pluginRepositories>
         <pluginRepository>
@@ -61,29 +41,22 @@
     </pluginRepositories>
 
     <dependencies>
-
-        <!-- NetShell -->
         <dependency>
-            <groupId>net.es</groupId>
-            <artifactId>netshell-kernel</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
-
         <dependency>
-            <groupId>net.es</groupId>
-            <artifactId>netshell-controller-intf</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.13</version>
         </dependency>
-
-        <!-- RabbitMQ only needed for SDN Controller -->
         <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>amqp-client</artifactId>
-            <version>3.5.3</version>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
         </dependency>
-
     </dependencies>
-
 
     <build>
         <plugins>
@@ -95,9 +68,8 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-                        <Bundle-Name>ESnet NetShell API and Generic Controller</Bundle-Name>
+                        <Bundle-Name>ESnet NetShell Controller Interfaces</Bundle-Name>
                         <Bundle-Version>1.0-SNAPSHOT</Bundle-Version>
-                        <Bundle-Activator>net.es.netshell.controller.core.Activator</Bundle-Activator>
                         <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
