--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ ESnet Network Operating System (ENOS) Copyright (c) 2015, The Regents
+  ~ ESnet Network Operating System (ENOS) Copyright (c) 2016, The Regents
   ~ of the University of California, through Lawrence Berkeley National
   ~ Laboratory (subject to receipt of any required approvals from the
   ~ U.S. Dept. of Energy).  All rights reserved.
@@ -24,6 +24,11 @@
     <groupId>net.es.netshell</groupId>
     <artifactId>NETSHELL</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <modules>
+        <module>controller-intf</module>
+        <module>odl-provider</module>
+        <module>features</module>
+    </modules>
     <packaging>pom</packaging>
     <name>NETSHELL project</name>
     <properties>
@@ -42,10 +47,12 @@
                 <modules>
                     <module>kernel</module>
                     <module>python</module>
+                    <module>controller-intf</module>
                     <module>controller</module>
-                    <module>odl-corsa</module>
                     <module>odl-mdsal</module>
                     <module>odl-corsa-intf</module>
+                    <module>odl-corsa</module>
+                    <module>odl-provider</module>
                 </modules>
         </profile>
         <profile>
@@ -56,9 +63,11 @@
                 <modules>
                     <module>kernel</module>
                     <module>python</module>
+                    <module>controller-intf</module>
                     <module>controller</module>
                     <module>odl-mdsal</module>
                     <module>odl-corsa-intf</module>
+                    <module>odl-provider</module>
                 </modules>
         </profile>
     </profiles>
