--- a/odl-provider/pom.xml
+++ b/odl-provider/pom.xml
@@ -24,9 +24,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.es.netshell</groupId>
+    <groupId>net.es</groupId>
     <artifactId>netshell-odl-provider</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>net.es</groupId>
             <artifactId>netshell-controller-intf</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <!-- RabbitMQ only needed for SDN Controller -->
@@ -50,13 +50,13 @@
         <dependency>
             <groupId>net.es</groupId>
             <artifactId>netshell-odl-mdsal</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>net.es</groupId>
             <artifactId>netshell-odl-corsa-intf</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -72,6 +72,7 @@
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>ESnet NetShell ODL Provider</Bundle-Name>
                         <Bundle-Version>1.0-SNAPSHOT</Bundle-Version>
+                        <Bundle-Activator>net.es.netshell.controller.core.Activator</Bundle-Activator>
                         <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
