--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>net.es.netshell</groupId>
-    <artifactId>NETSHELL</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>net.es</groupId>
+    <artifactId>netshell</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>controller-intf</module>
         <module>odl-provider</module>
