--- a/python/pom.xml
+++ b/python/pom.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ESnet Network Operating System (ENOS) Copyright (c) 2015, The Regents
-  of the University of California, through Lawrence Berkeley National
-  Laboratory (subject to receipt of any required approvals from the
-  U.S. Dept. of Energy).  All rights reserved.
-
-  If you have questions about your rights to use or distribute this
-  software, please contact Berkeley Lab's Innovation & Partnerships
-  Office at IPO@lbl.gov.
-
-  NOTICE.  This Software was developed under funding from the
-  U.S. Department of Energy and the U.S. Government consequently retains
-  certain rights. As such, the U.S. Government has been granted for
-  itself and others acting on its behalf a paid-up, nonexclusive,
-  irrevocable, worldwide license in the Software to reproduce,
-  distribute copies to the public, prepare derivative works, and perform
-  publicly and display publicly, and to permit other to do so.
+  ~ ESnet Network Operating System (ENOS) Copyright (c) 2016, The Regents
+  ~ of the University of California, through Lawrence Berkeley National
+  ~ Laboratory (subject to receipt of any required approvals from the
+  ~ U.S. Dept. of Energy).  All rights reserved.
+  ~
+  ~ If you have questions about your rights to use or distribute this
+  ~ software, please contact Berkeley Lab's Innovation & Partnerships
+  ~ Office at IPO@lbl.gov.
+  ~
+  ~ NOTICE.  This Software was developed under funding from the
+  ~ U.S. Department of Energy and the U.S. Government consequently retains
+  ~ certain rights. As such, the U.S. Government has been granted for
+  ~ itself and others acting on its behalf a paid-up, nonexclusive,
+  ~ irrevocable, worldwide license in the Software to reproduce,
+  ~ distribute copies to the public, prepare derivative works, and perform
+  ~ publicly and display publicly, and to permit other to do so.
+  ~
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -24,7 +25,7 @@
 
     <groupId>net.es</groupId>
     <artifactId>netshell-python</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -70,7 +71,7 @@
         <dependency>
             <groupId>net.es</groupId>
             <artifactId>netshell-kernel</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <!-- Mockito -->
         <dependency>
