--- a/python/pom.xml
+++ b/python/pom.xml
@@ -23,14 +23,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.es</groupId>
+    <parent>
+        <groupId>net.es.netshell</groupId>
+        <artifactId>netshell-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../parent/pom.xml</relativePath>
+    </parent>
+
+    <groupId>net.es.netshell</groupId>
     <artifactId>netshell-python</artifactId>
+    <name>${project.artifactId}</name>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
 
     <repositories>
         <repository>
@@ -60,7 +64,6 @@
     </pluginRepositories>
 
     <dependencies>
-
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
@@ -69,9 +72,9 @@
 
         <!-- NetShell -->
         <dependency>
-            <groupId>net.es</groupId>
+            <groupId>net.es.netshell</groupId>
             <artifactId>netshell-kernel</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- Mockito -->
         <dependency>
@@ -79,9 +82,7 @@
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
         </dependency>
-
     </dependencies>
-
 
     <build>
         <plugins>
@@ -94,33 +95,13 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>ESnet NetShell Python Bundle</Bundle-Name>
-                        <Bundle-Version>1.0-SNAPSHOT</Bundle-Version>
+                        <Bundle-Version>${project.version}</Bundle-Version>
                         <Bundle-Activator>net.es.netshell.python.PythonActivator</Bundle-Activator>
                         <Export-Package>net.es.netshell.python</Export-Package>
                         <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>7</source>
-                    <target>7</target>
-                </configuration>
-            </plugin>
         </plugins>
-        <extensions>
-             <extension>
-                  <groupId>org.apache.maven.wagon</groupId>
-                  <artifactId>wagon-file</artifactId>
-             </extension>
-             <extension>
-                  <groupId>org.apache.maven.wagon</groupId>
-                  <artifactId>wagon-ssh</artifactId>
-             </extension>
-        </extensions>
     </build>
-
 </project>
