--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -24,21 +24,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.es</groupId>
+    <parent>
+        <groupId>net.es.netshell</groupId>
+        <artifactId>netshell-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../parent/pom.xml</relativePath>
+    </parent>
+
+    <groupId>net.es.netshell</groupId>
     <artifactId>netshell-kernel</artifactId>
+    <name>${project.artifactId}</name>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
-    <properties>
-        <kernel.version>0.0.1-SNAPSHOT</kernel.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-        <guava.version>18.0</guava.version>
-    </properties>
 
     <repositories>
-	    <repository>
-        	    <id>Jsch</id>
+	<repository>
+            <id>Jsch</id>
     	    <url>http://jsch.sf.net/maven2/</url>
     	</repository>
     	<repository>
@@ -91,28 +92,28 @@
         <dependency>
 	    <groupId>com.google.guava</groupId>
 	    <artifactId>guava</artifactId>
-	    <version>${guava.version}</version>
+	    <version>18.0</version>
         </dependency>
 
     	<dependency>
-	        <groupId>com.jcraft</groupId>
-	        <artifactId>jsch</artifactId>
+	    <groupId>com.jcraft</groupId>
+	    <artifactId>jsch</artifactId>
     	    <version>0.1.51</version>
-	    </dependency>
+	</dependency>
+
     	<!-- Adding dependency to resolve java error  -->
-	    <dependency>
-	        <groupId>net.java.dev.jna</groupId>
+	<dependency>
+	    <groupId>net.java.dev.jna</groupId>
     	    <artifactId>jna</artifactId>
-	        <version>4.0.0</version>
+	    <version>4.0.0</version>
     	</dependency>
-	    <dependency>
-	        <groupId>net.java.dev.jna</groupId>
-	        <artifactId>jna-platform</artifactId>
-	        <version>4.0.0</version>
-            <!-- <classifier>platform</classifier>-->
-	    </dependency>
- 
-	    <dependency>
+	<dependency>
+	    <groupId>net.java.dev.jna</groupId>
+	    <artifactId>jna-platform</artifactId>
+	    <version>4.0.0</version>
+	</dependency>
+
+	<dependency>
             <groupId>jline</groupId>
             <artifactId>jline</artifactId>
             <version>2.11</version>
@@ -236,7 +237,6 @@
 
     </dependencies>
 
-
     <build>
         <plugins>
             <plugin>
@@ -248,7 +248,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>ESnet NetShell</Bundle-Name>
-                        <Bundle-Version>1.0-SNAPSHOT</Bundle-Version>
+                        <Bundle-Version>${project.version}</Bundle-Version>
                         <Bundle-Activator>net.es.netshell.boot.BootActivator</Bundle-Activator>
                         <Export-Package>
                             net.es.netshell.api,
@@ -265,7 +265,7 @@
                             net.es.netshell.rabbitmq,
                             net.es.netshell.shell,
                             net.es.netshell.shell.annotations,
-			                net.es.netshell.vm,
+			    net.es.netshell.vm,
                             net.es.netshell.sshd
                         </Export-Package>
                         <Import-Package>
@@ -273,15 +273,6 @@
                             *
                         </Import-Package>
                     </instructions>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>7</source>
-                    <target>7</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -308,16 +299,6 @@
                 </executions>
             </plugin>
         </plugins>
-        <extensions>
-             <extension>
-                  <groupId>org.apache.maven.wagon</groupId>
-                  <artifactId>wagon-file</artifactId>
-             </extension>
-             <extension>
-                  <groupId>org.apache.maven.wagon</groupId>
-                  <artifactId>wagon-ssh</artifactId>
-             </extension>
-        </extensions>
     </build>
 
 </project>
