--- a/odl-provider/pom.xml
+++ b/odl-provider/pom.xml
@@ -24,20 +24,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.es</groupId>
+    <parent>
+        <groupId>net.es.netshell</groupId>
+        <artifactId>netshell-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../parent/pom.xml</relativePath>
+    </parent>
+
+    <groupId>net.es.netshell</groupId>
     <artifactId>netshell-odl-provider</artifactId>
+    <name>${project.artifactId}</name>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>net.es</groupId>
+            <groupId>net.es.netshell</groupId>
             <artifactId>netshell-controller-intf</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- RabbitMQ only needed for SDN Controller -->
@@ -48,15 +52,15 @@
         </dependency>
 
         <dependency>
-            <groupId>net.es</groupId>
+            <groupId>net.es.netshell</groupId>
             <artifactId>netshell-odl-mdsal</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>net.es</groupId>
+            <groupId>net.es.netshell</groupId>
             <artifactId>netshell-odl-corsa-intf</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
@@ -71,32 +75,13 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>ESnet NetShell ODL Provider</Bundle-Name>
-                        <Bundle-Version>1.0-SNAPSHOT</Bundle-Version>
+                        <Bundle-Version>${project.version}</Bundle-Version>
                         <Bundle-Activator>net.es.netshell.controller.core.Activator</Bundle-Activator>
                         <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>7</source>
-                    <target>7</target>
-                </configuration>
-            </plugin>
         </plugins>
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-file</artifactId>
-            </extension>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ssh</artifactId>
-            </extension>
-        </extensions>
     </build>
 
 </project>
