--- a/pom.xml
+++ b/pom.xml
@@ -21,20 +21,19 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>net.es</groupId>
+
+    <parent>
+        <groupId>net.es.netshell</groupId>
+        <artifactId>netshell-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>parent</relativePath>
+    </parent>
+
+    <groupId>net.es.netshell</groupId>
     <artifactId>netshell</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <modules>
-        <module>controller-intf</module>
-        <module>odl-provider</module>
-        <module>features</module>
-    </modules>
+    <name>${project.artifactId}</name>
     <packaging>pom</packaging>
-    <name>NETSHELL project</name>
-    <properties>
-       <netshell.version>0.0.1-SNAPSHOT</netshell.version>
-       <java.version>1.7</java.version>
-    </properties>
 
     <profiles>
         <profile>
@@ -45,6 +44,7 @@
                 </property>
             </activation>
                 <modules>
+                    <module>parent</module>
                     <module>kernel</module>
                     <module>python</module>
                     <module>controller-intf</module>
@@ -53,6 +53,7 @@
                     <module>odl-corsa-intf</module>
                     <module>odl-corsa</module>
                     <module>odl-provider</module>
+                    <module>features</module>
                 </modules>
         </profile>
         <profile>
@@ -61,6 +62,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
                 <modules>
+                    <module>parent</module>
                     <module>kernel</module>
                     <module>python</module>
                     <module>controller-intf</module>
@@ -68,19 +70,8 @@
                     <module>odl-mdsal</module>
                     <module>odl-corsa-intf</module>
                     <module>odl-provider</module>
+                    <module>features</module>
                 </modules>
         </profile>
     </profiles>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-               <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.2</version>
-               </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
  </project>
